--- a/style.css
+++ b/style.css
@@ -87,6 +87,31 @@ body {
     margin-top: 15px;
     font-size: 14px;
 }
+.facebook-login {
+    width: 100%;
+    padding: 12px;
+    background-color: #1877f2;
+    color: #ffffff;
+    border: none;
+    border-radius: 6px;
+    font-weight: bold;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 10px;
+    transition: background-color 0.3s;
+}
+
+.facebook-login:hover {
+    background-color: #145dc1;
+}
+
+.facebook-login img {
+    width: 40px;
+    height: 40px;
+}
 
 /* 📱 Celulares  */
 @media (max-width: 400px) {
